# news-sentiment

./: .claudeignore  .dockerignore  .env.example  .env.example.database  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SENTIMENT_ANALYSIS_REPORT.md  analyze_sentiment_issues.py  analyze_zero_reasoning.py  detailed_sentiment_analysis.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test_report_20251130_155604.json  test_report_20251130_155914.json  test_report_20251130_160211.json  test_report_20251130_160332.json  test_report_20251130_160647.json
.claude/: OPTIMIZATION-SUMMARY.md  config.json
.github/: pull_request_template.md
archived-rules-2025-01/: README.md
docs/: DATA_GUIDE.md
migrations/: 001_create_eurusd_rates_tables.sql  002_create_economic_events_table.sql  003_create_reddit_posts_table.sql  004_add_ticker_extraction.sql
scripts/: .backfill_checkpoint.json  analyze_historical_sentiment.py  backfill_forex_factory.py  export_for_ml.py  reprocess_failed_images.py  reprocess_failed_sentiment.py  reprocess_image_posts.py  reprocess_reddit_sentiment.py  reprocess_wrong_template.py  test_pipeline.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_analyzer_utils.py  test_cli.py  test_conftest_fixtures.py  test_database.py  test_gemini_analyzer.py  test_gemini_image_download.py  test_gemini_image_failures.py  test_imports.py  test_integration_analyzer.py  test_integration_e2e.py  test_integration_reddit.py  test_integration_scraper.py  test_main.py  test_migration_002.py  (+6 more)
(+80 files in other folders)
